--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
-  "name": "lcd",
+  "react-svg-icons": {
+    "assetPath": "src/Icons"
+  },
+  "name": "interjet-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "antd": "^3.6.5",
+    "jest-cli": "^23.2.0",
+    "rc-checkbox": "^2.1.5",
+    "react": "^16.4.1",
+    "react-burger-menu": "^2.5.2",
+    "react-checkbox-group": "^4.0.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "react-slider-menu": "^0.2.3",
+    "react-svg-icons": "^0.3.0",
+    "reactstrap": "^6.1.0",
+    "styled-components": "^3.3.3",
+    "update-notifier": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "babel-plugin-import": "^1.8.0",
+    "prettier-eslint": "^8.8.2"
   }
 }
