--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
   "private": true,
   "dependencies": {
     "antd": "^3.6.5",
+    "bootstrap": "^4.1.3",
     "jest-cli": "^23.2.0",
     "rc-checkbox": "^2.1.5",
-    "react": "^16.4.1",
+    "react": "^16.4.2",
     "react-burger-menu": "^2.5.2",
     "react-checkbox-group": "^4.0.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-slider-menu": "^0.2.3",
     "react-svg-icons": "^0.3.0",
-    "reactstrap": "^6.1.0",
+    "reactstrap": "^6.4.0",
     "styled-components": "^3.3.3",
     "update-notifier": "^2.5.0"
   },
