--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "react-svg-icons": {
     "assetPath": "src/Icons"
   },
-  "name": "interjet-admin",
+  "name": "LaCorrupcionDesmedida",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
