--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-svg-icons": "^0.3.0",
     "reactstrap": "^6.4.0",
     "styled-components": "^3.3.3",
+    "ts-react-json-table": "^0.1.1",
     "update-notifier": "^2.5.0"
   },
   "scripts": {
