--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "antd": "^3.6.5",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.2",
     "jest-cli": "^23.2.0",
     "rc-checkbox": "^2.1.5",
     "react": "^16.4.2",
     "react-burger-menu": "^2.5.2",
+    "react-chartkick": "^0.3.0",
     "react-checkbox-group": "^4.0.1",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
