--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "jest-cli": "^23.2.0",
     "rc-checkbox": "^2.1.5",
     "react": "^16.4.2",
+    "react-bootstrap-table": "^4.3.1",
     "react-burger-menu": "^2.5.2",
     "react-chartkick": "^0.3.0",
     "react-checkbox-group": "^4.0.1",
+    "react-data-components": "^1.2.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
