--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,13 @@
   "plugins": [
     [
       "import",
-      { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }
+      { "libraryName": "antd", "libraryDirectory": "es", "style": "css" },
+      "env", {
+        "development" : {
+          "compact": false
+        }
+      }
     ]
   ]
+  
 }
