--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "jest-cli": "^23.2.0",
+    "pdf-to-text": "0.0.7",
     "rc-checkbox": "^2.1.5",
     "react": "^16.4.2",
     "react-bootstrap-table": "^4.3.1",
