--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slider-menu": "^0.2.3",
     "react-svg-icons": "^0.3.0",
     "reactstrap": "^6.4.0",
+    "request-promise": "^4.2.2",
     "styled-components": "^3.3.3",
     "ts-react-json-table": "^0.1.1",
     "update-notifier": "^2.5.0"
