--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "jest-cli": "^23.2.0",
+    "moment": "^2.22.2",
     "pdf-to-text": "0.0.7",
     "rc-checkbox": "^2.1.5",
     "react": "^16.4.2",
@@ -24,6 +25,7 @@
     "react-slider-menu": "^0.2.3",
     "react-svg-icons": "^0.3.0",
     "reactstrap": "^6.4.0",
+    "request-promise": "^4.2.2",
     "styled-components": "^3.3.3",
     "ts-react-json-table": "^0.1.1",
     "update-notifier": "^2.5.0"
