--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-chartkick": "^0.3.0",
     "react-checkbox-group": "^4.0.1",
     "react-data-components": "^1.2.0",
+    "react-data-grid": "^4.0.8",
     "react-dom": "^16.4.2",
+    "react-responsive-modal": "^3.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-slider-menu": "^0.2.3",
