--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react-data-components": "^1.2.0",
     "react-data-grid": "^4.0.8",
     "react-dom": "^16.4.2",
+    "react-modal": "^3.5.1",
     "react-responsive-modal": "^3.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-slider-menu": "^0.2.3",
     "react-svg-icons": "^0.3.0",
     "reactstrap": "^6.4.0",
+    "recharts": "^1.2.0",
     "request-promise": "^4.2.2",
     "styled-components": "^3.3.3",
     "ts-react-json-table": "^0.1.1",
