--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.6.5",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
+    "eslint": "^5.5.0",
     "jest-cli": "^23.2.0",
     "moment": "^2.22.2",
     "pdf-to-text": "0.0.7",
