--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-data-components": "^1.2.0",
     "react-data-grid": "^4.0.8",
     "react-dom": "^16.4.2",
+    "react-loading-screen": "0.0.17",
     "react-modal": "^3.5.1",
     "react-responsive-modal": "^3.3.0",
     "react-router-dom": "^4.3.1",
