--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "private": true,
   "dependencies": {
     "antd": "^3.6.5",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.2",
     "eslint": "^5.5.0",
+    "express": "^4.16.4",
     "jest-cli": "^23.2.0",
     "moment": "^2.22.2",
     "pdf-to-text": "0.0.7",
@@ -34,7 +36,8 @@
     "request-promise": "^4.2.2",
     "styled-components": "^3.3.3",
     "ts-react-json-table": "^0.1.1",
-    "update-notifier": "^2.5.0"
+    "update-notifier": "^2.5.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
